Added constraints to map view on task detail vc so it takes up entire remainder of screen

--- a/Taskly/Base.lproj/Main.storyboard
+++ b/Taskly/Base.lproj/Main.storyboard
@@ -183,12 +183,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="HFx-03-YH4" firstAttribute="top" secondItem="c6q-cj-DVL" secondAttribute="bottom" constant="-1" id="160-uK-JDN"/>
                             <constraint firstItem="6vy-KO-OTA" firstAttribute="width" secondItem="qnV-Ju-WdM" secondAttribute="width" id="AGE-r1-ehp"/>
                             <constraint firstAttribute="width" secondItem="c6q-cj-DVL" secondAttribute="width" id="CLh-Mj-6hQ"/>
                             <constraint firstItem="pKu-8m-Pyv" firstAttribute="width" secondItem="qnV-Ju-WdM" secondAttribute="width" id="Dx7-Yz-iFQ"/>
                             <constraint firstAttribute="width" secondItem="Xfx-mv-xoa" secondAttribute="width" id="W9P-OU-E2J"/>
                             <constraint firstItem="GOa-aU-bEE" firstAttribute="width" secondItem="qnV-Ju-WdM" secondAttribute="width" id="hYC-Ti-HEP"/>
                             <constraint firstItem="lKs-T3-H6m" firstAttribute="width" secondItem="qnV-Ju-WdM" secondAttribute="width" id="jaD-Zf-e7e"/>
+                            <constraint firstItem="g7B-TF-fFF" firstAttribute="top" secondItem="HFx-03-YH4" secondAttribute="bottom" id="kpb-vN-sb1"/>
                             <constraint firstItem="HFx-03-YH4" firstAttribute="width" secondItem="qnV-Ju-WdM" secondAttribute="width" id="thu-9c-LX1"/>
                             <constraint firstAttribute="width" secondItem="WCL-gI-sdi" secondAttribute="width" id="vlk-FA-3Fd"/>
                         </constraints>
